# ensimag-minigc

./: CMakeLists.txt  README.md
doc/: Articles.org
src/: bitset1000.cpp  bitset1000.h  elempool.c  elempool.h  libbitset1000.cpp  libbitset1000.h  libgc.c
tests/: gctests.c  test0.c  test1.c  test2.c  test3.c  test4.c  utest.h
